--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dlv": "^1.1.3",
+    "formik": "^2.4.6",
     "mongoose": "^8.8.3",
     "prettylink": "^1.1.0",
     "qr-image": "^3.2.0",
@@ -21,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.12.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
